# cofi-chai-test

./: .readthedocs.yaml  pyproject.toml
.github/workflows/: code_cov.yml  main.yml  publish_pypi.yml  python-publish.yml  test.yml
docs/source/: conf.py  contribute.rst
docs/source/_ext/: gen_gallery_scripts.py
docs/source/developer/: docs.rst  new_example.rst  new_tool.rst
docs/source/tutorials/scripts/: 1D_rayleigh_wave_phase_velocity_inversion.md5  1D_rayleigh_wave_phase_velocity_inversion.py  electrical_resistivity_tomography.md5  linear_regression.md5  thin_plate_inversion.md5  travel_time_tomography.md5
envs/: requirements_dev.txt  requirements_test.txt
src/cofi/tools/: __init__.py  _mealpy_sma.py
tests/cofi_tools/: test_mealpy_sma.py  test_pytorch_optim.py
tests/cofi_utils/: test_reg_weighted_lp_norm.py
